fix: 전반적인 개발 환경 안정화

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,10 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your_project.firebasestorage.app
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
 NEXT_PUBLIC_FIREBASE_APP_ID=your_app_id
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=your_measurement_id
+
+# Cloud Server Configuration
+CLOUD_SERVER_URL=http://localhost:8000
+
+# Optional: Supabase Configuration (not currently used)
+# NEXT_PUBLIC_SUPABASE_URL=your_supabase_url
+# NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
